--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     },
     "dependencies": {
         "expo": "~49.0.15",
+        "expo-location": "~16.1.0",
         "expo-status-bar": "~1.6.0",
         "react": "18.2.0",
         "react-native": "0.72.6",
+        "react-native-gesture-handler": "~2.12.0",
         "react-native-maps": "1.7.1",
-        "expo-location": "~16.1.0"
+        "react-native-reanimated": "~3.3.0",
+        "react-native-ui-lib": "^7.10.0"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0",
