--- a/app.json
+++ b/app.json
@@ -1,5 +1,6 @@
 {
     "expo": {
+        "scheme": "outdrive-scheme",
         "name": "OutDrive",
         "slug": "OutDrive",
         "version": "1.0.0",
@@ -23,6 +24,7 @@
         },
         "web": {
             "favicon": "./assets/favicon.png"
-        }
+        },
+        "plugins": ["expo-router"]
     }
 }
