--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "outdrive",
     "version": "1.0.0",
-    "main": "node_modules/expo/AppEntry.js",
+    "main": "expo-router/entry",
     "scripts": {
         "start": "expo start",
         "start:clean": "expo start --clear",
@@ -20,7 +20,12 @@
         "react-native-gesture-handler": "~2.12.0",
         "react-native-maps": "1.7.1",
         "react-native-reanimated": "~3.3.0",
-        "react-native-ui-lib": "^7.10.0"
+        "react-native-ui-lib": "^7.10.0",
+        "expo-router": "^2.0.0",
+        "react-native-safe-area-context": "4.6.3",
+        "react-native-screens": "~3.22.0",
+        "expo-linking": "~5.0.2",
+        "expo-constants": "~14.4.2"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0",
